# coding_agent_harness

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  SPEC.md  SPEC_PROCESS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: demo_feedback.py  demo_guardrail.py  demo_hitl.py
frontend/: index.html
myagent/: __init__.py
myagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
myagent/agent/: loop.py  parser.py  state.py  stop.py
myagent/api/: server.py
myagent/cli/: key.py  main.py  run.py
myagent/config/: settings.py
myagent/credentials/: store.py
myagent/feedback/: base.py  linter.py  test_runner.py
myagent/guardrails/: base.py  command.py  hitl.py  path.py  pipeline.py
myagent/llm/: backend.py  bailian.py  mock.py  prompt.py
myagent/memory/: chroma.py  sqlite.py
myagent/tools/: base.py  docker_sandbox.py  file_io.py  registry.py  search.py  shell.py  test_runner.py
tests/: conftest.py
tests/agent/: test_loop.py  test_parser.py  test_state.py  test_stop.py
tests/cli/: test_cli.py
tests/config/: test_settings.py
tests/credentials/: test_store.py
tests/feedback/: test_linter.py  test_test_runner.py
tests/guardrails/: test_command.py  test_hitl.py  test_path.py  test_pipeline.py
tests/integration/: test_full_loop.py
tests/llm/: test_bailian.py  test_mock.py  test_prompt.py
tests/memory/: test_chroma.py  test_sqlite.py
tests/tools/: test_docker_sandbox.py  test_file_io.py  test_registry.py  test_shell.py
